other-cel/require-deployments-have-multiple-replicas/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: require-deployments-have-multiple-replicas
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../require-deployments-have-multiple-replicas.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: deployment-has-multiple-replicas
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: deploy-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: deploy-bad.yaml
